# pytest-aiohttp-client

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  LICENSE  Makefile  README.md  pyproject.toml  pytest_aiohttp_client.py  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
pytest_aiohttp_client/: __init__.py  plugin.py
tests/: conftest.py  test_client.py  test_dummy.py
