[tool.poetry]
name = "pytest-aiohttp-client"
version = "0.0.3"  # VERSION_ANCHOR
description = "Pytest `client` fixture for the Aiohttp"
license = "MIT"
authors = ["Nikita Sivakov <sivakov512@icloud.com>"]
readme = "README.md"
homepage = "https://github.com/sivakov512/pytest-aiohttp-client"
repository = "https://github.com/sivakov512/pytest-aiohttp-client"

[tool.poetry.dependencies]
python = "^3.9"
pytest = {version = "^7.2.0", optional = true}
aiohttp = "^3.8.3"

[tool.poetry.plugins.pytest11]
pytest_aiohttp_client = "pytest_aiohttp_client"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-debugger = "^4.1.2"
flake8-isort = "^6.0.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.6.0"
flake8-quotes = "^3.3.2"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-deadfixtures = "^2.2.1"
flake8-black = "^0.3.6"
black = "^22.12.0"
pytest-cov = "^4.0.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
implicit_reexport = false

[tool.black]
line-length = 100
